--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "express": "^4.16.4",
     "hammerjs": "^2.0.8",
     "http": "0.0.0",
+    "lodash": "^4.17.11",
     "moment": "2.24.0",
     "rxjs": "6.4.0",
     "socket.io": "^2.2.0",
