--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
       "experimentalDecorators": true,
       "noImplicitAny": true,
       "suppressImplicitAnyIndexErrors": true,
-      "lib": ["es6", "dom"],
+      "lib": ["es6", "dom", "es2017"],
       "typeRoots": ["node_modules/@types"]
     },
     "exclude": [
